# MultiCoder

./: .barix-encoder4-orig.json  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: build-linux.yml  build-windows.yml  docker-publish.yml  docker.yml
ToSendForPrompt/: Axia Multicast CODEC-USE 1.xlsx  config-sample.json.txt  styles.css.txt
UI Mockup/: UI-Mock.pspimage
UI Mockup/Corel Auto-Preserve/: UI-Mock.pspimage
configs/: aac.json.default  control.json.default  hls.json.default  input.json.default  metadata.json.default  mp3.json.default  srt.json.default  system.json.default
docs/: MULTICODER_TECHNICAL_WRITEUP.md  REQUIREMENT_AUDIT.md  SCTE_QA_TEST_PLAN.md
reference/: MultiCoder-Combined.MISSING.txt
scripts/: Get-FFmpeg.ps1  entrypoint.sh  init-dirs.sh  smoke-test.ps1  smoke-test.sh  windows-install.ps1
src/: CMakeLists.txt
src/common/: SimpleJson.cpp
src/include/: LivewireMapping.h  SimpleJson.h
src/livewire/: LivewireMapping.cpp
src/supervisor/: main.cpp  supervisor_api.cpp  supervisor_api.h
src/worker/: main.cpp  worker.cpp  worker.h
tests/: CMakeLists.txt
tests/integration/: integration-test-plan.md
tests/unit/: CMakeLists.txt  test_config.cpp  test_hls.cpp  test_livewire.cpp  test_logpolicy.cpp  test_metadata.cpp  test_simplejson.cpp
www/: app.js  index.html  styles.css
